# hayabusa

./: Cargo.toml  LICENSE
config/: echo.toml  flood.toml
src/: main.rs
src/config/: loader.rs  mod.rs  types.rs
src/sender/: mod.rs  task.rs
src/server/: echo.rs  flood.rs  mod.rs
